# pepip

./: .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  LICENSE-APACHE  LICENSE.md  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish-pypi.yml  run-tests.yml
docs/: Production_Tests.md  USAGE.md
eval/: benchmark.py
pepip/: __init__.py  cli.py  installer.py
scripts/: _smoke_matrix_utils.py  install_smoke_matrix.py  test_script.sh  test_uv_versions_direct.sh  uv_repo_tester.sh  uv_repos.txt
src/pepip/: cli.py
test-scripts/: README.md  _smoke_matrix_utils.py  install_smoke_matrix.py  pepip_repo_tester.sh  pepip_results.tsv  remove_finished.py  results.tsv  sort-repos.py  test_uv_versions.sh  uv_repo_tester.sh  uv_repos.txt  uv_repos_failed.txt  uv_repos_success.txt
test-scripts/manual-sanity/: README.md  test_package_versions.sh  test_script.sh
test-scripts/package-smoke/: README.md  _smoke_matrix_utils.py  install_smoke_matrix.py
test-scripts/python-versions/: README.md  test_python_versions.sh
test-scripts/repo-replay/: README.md  pepip_repo_tester.sh  uv_repo_tester.sh  uv_repos.txt
test-scripts/uv-compatibility/: README.md  test_uv_versions.sh  test_uv_versions_direct.sh
tests/: __init__.py  test_cli.py  test_installer.py
tests/cli/: __init__.py  test_install_command.py  test_uv_passthrough_commands.py  test_venv_command.py
tests/installer/: __init__.py  helpers.py  test_core_helpers.py  test_distribution_metadata.py  test_install_flow.py  test_link_packages.py  test_stale_distribution_links.py  test_store.py  test_venv_management.py
