[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pepip"
version = "0.0.7"
description = "Shared global environment package installer using symlinks — like pnpm for Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["pip", "package-manager", "virtual-environment", "symlinks", "uv", "coenv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "uv>=0.11.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "ruff>=0.6.0",
    "rich>=14.0.0",
]

[project.scripts]
pepip = "pepip.cli:main"

[project.urls]
Homepage = "https://github.com/perf-pip/pepip"
Issues = "https://github.com/perf-pip/pepip/issues"

[tool.hatch.build.targets.wheel]
packages = ["pepip"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
